# blackhole-e2

./: Makefile.am  configure.ac
data/: Makefile.am
lib/gui/: Makefile.inc
lib/python/: enigma_python.i
lib/python/Blackhole/: BhAddons.py  BhBlue.py  BhSettings.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/AddStreamUrl/: Makefile.am  __init__.pyo  plugin.pyo
lib/python/Plugins/Extensions/BhEpgBackup/: Makefile.am  __init__.pyo
lib/python/Plugins/Extensions/BhFastEpg/: Makefile.am  __init__.pyo  plugin.pyo
lib/python/Plugins/Extensions/BhFullBackup/: Makefile.am  __init__.pyo
lib/python/Plugins/Extensions/BhPersonalBackup/: Makefile.am  __init__.pyo
lib/python/Plugins/Extensions/BhWeather/: Makefile.am  __init__.pyo
lib/python/Plugins/Extensions/DLNABrowser/: Makefile.am  __init__.pyo  plugin.pyo
lib/python/Plugins/Extensions/DLNAServer/: Makefile.am  __init__.pyo  plugin.pyo
lib/python/Plugins/Extensions/StreamTV/: Makefile.am  __init__.pyo  plugin.pyo
lib/python/Plugins/SystemPlugins/: Makefile.am  __init__.pyo
lib/python/Plugins/SystemPlugins/BlackHoleApi/: Makefile.am  __init__.pyo
lib/python/Plugins/SystemPlugins/NetworkBrowser/: AutoMount.pyo  Makefile.am  MountEdit.pyo  MountManager.pyo  MountView.pyo  NetworkBrowser.pyo  UserDialog.pyo  UserManager.pyo  __init__.pyo  plugin.pyo
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.pyo  __init__.pyo  plugin.pyo
lib/python/Plugins/SystemPlugins/SkinSelector/: Makefile.am  __init__.pyo  plugin.pyo
(+8 files in other folders)
