installdir = $(pkglibdir)/python/Plugins/Extensions

SUBDIRS = TuxboxPlugins CutListEditor PicturePlayer MediaScanner SocketMMI DVDBurn MediaPlayer \
          AddStreamUrl BhEpgBackup BhFastEpg BhFullBackup BhPersonalBackup BhWeather DLNABrowser \
          DLNAServer StreamTV

if HAVE_LIBDDVD
SUBDIRS += DVDPlayer
endif

install_PYTHON = __init__.py
